# lutis

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_opencv.md  index.js  package-lock.json  package.json  runlinux
.github/workflows/: ci.yml
lib/: index.js
plugin/: Base.h  Core.h  Draw.h  Filter.h  Image.h  Lutis.cc  Lutis.cpp  NJpeg.h  NMagick.h  NOpenCv.h  NPng.h  NWebp.h  Type.h
scripts/: download_tessdata  imagemagick  install_dep_ubuntu  jpeg  leptonica  opencv  png  tesseract  tiff  webp  zlib
tessdata/: README.md
